[package]
name = "proxy-probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redbpf-macros = {version = "1.3", optional = true }
redbpf-probes = {version = "1.3", optional = true }


[features]
default = []
probes = ["redbpf-probes", "redbpf-macros"]

[[bin]]
name = "proxy"
path = "src/probe.rs"
required-features = ["probes"]
