[package]
name = "policy-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "policy-proxy"
path = "src/main.rs"


[dependencies]
proxy-probe = { path = "../proxy-probe" }

biscuit-auth = "2.0.0"
eyre = "0.6.6"
futures = "0.3.21"
hyper = { version = "0.14.16", features = ["full"] }
nix = "0.23.1"
tokio = { version = "1.16.1", features = ["full"] }
trust-dns-resolver = "0.20.4"
url = "2.2.2"


tracing = "0.1"
tracing-subscriber = "0.2"

redbpf = {version = "1.3", features = ["load"] }


[features]
default = []


[build-dependencies]
cargo-bpf = { version = "1.3", default-features = false, features = ["build"] }
